tests/mytests/error/fun_error1.vsl
PROTO VOID foo()

FUNC INT main() {
    test
    test := 5
    RETURN test
}

FUNC INT foo() {
    test
    test := 5
    RETURN test
}
